KAFKA-21028: [1/2] Remove hamcrest from org.apache.kafka.streams.processor.internals package (#23407)
Remove hamcrest from a subset of tests in the
`org.apache.kafka.streams.processor.internals` package by migrating to
JUnit assertions.

Reviewers: Chia-Ping Tsai <chia7712@gmail.com>